[Picture in Picture] Support Alt+F4 to close window on Windows OS.

On Windows OS, Alt+F4 is used to close windows. This change handles
this key combination on Windows.

Bug: 876995
Change-Id: I48cf3ba26c38be30d5e2eb45663dc33cf5235d62
Reviewed-on: https://chromium-review.googlesource.com/1194681
Commit-Queue: apacible <apacible@chromium.org>
Reviewed-by: CJ DiMeglio <lethalantidote@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586994}
Former-commit-id: c85f48c47cc6bedf4de64f10faaca4c2d67148ad